<resources>
    <string name="app_name">Pull_Up_Challenge</string>
    <string name="gravitation">Gravitation</string>
    <string name="rauf">Rauf</string>
    <string name="runter">Runter</string>
    <string name="pullup">Pull Ups</string>
    <string name="geschwindigkeit">m/s²</string>
    <string name="endscore">Endscore:</string>
    <string name="anzahl">Anzahl:   </string>
    <string name="ende">Ende</string>
    <string name="start">Start</string>
    <string name="bt_back">Speichern und zurück</string>
    <string name="TVLogin">Login</string>
    <string name="BTSignIn">Einloggen</string>
    <string name="TVNoACC">Kein Account? Anmelden</string>
    <string name="TVNoACC2">hier.</string>
    <string name="BTdatabase">Database</string>
    <string name="TVRegister">Registrieren</string>
    <string name="BTRegister">Registrieren</string>
    <string name="Player1">Spieler 1</string>
    <string name="Player2">Spieler 2</string>
    <string name="error_room">Raum existiert bereits oder hat schon zwei Spieler</string>
    <string name="error_room_one_player">Die Runde wird nicht gestartet, da nur ein Spieler beigetreten ist.</string>
    <string name="gewonnen">Gewonnen</string>
    <string name="verloren">Verloren</string>
    <string name="unentschieden">Unentschieden</string>
    <string name="update">Passwort wurde aktualisiert</string>
    <string name="wrong_old">Alters Passwort ist inkorrekt</string>
    <string name="req_pass">Passwort muss mindestens 8 Zeichen beinhalten, Groß- und Kleinbuchstaben, Sonderzeichen und Nummern</string>
    <string name="req_same">Das neue Passwort darf nicht ident mit dem alten Passwort sein</string>
    <string name="rep_pas">Die Passwörter müssen ident sein</string>
    <string name="tuen">Was können wir für dich tun, </string>
    <string name="old_enter">Altes Passwort eingeben</string>
    <string name="new_enter">Neues Passwort eingeben</string>
    <string name="pasword_change">Passwort ändern</string>
    <string name="avatar_choose">Avatar wählen</string>
    <string name="back">Zurück</string>
    <string name="history">Deine Matches: </string>
    <string name="countdown">Countdown</string>
    <string name="create_room">Raum erstellen</string>
    <string name="join_room">Raum beitreten</string>
    <string name="room_code">Raum Code eingeben zum beitreten</string>
    <string name="welcome">Wilkommen,</string>
    <string name="picture_choose">Bild auswählen</string>
    <string name="picture_rec">Bild aufnehmen</string>
    <string name="open_cam">Kamera öffnen</string>
    <string name="gallery">Von Gallerie auswählen</string>
    <string name="cancel">Abbrechen</string>
    <string name="no_pic">Kein Bild ausgewählt</string>
    <string name="no_photo">Kein Foto gemacht</string>
    <string name="camerea_perm">Kamerazugriff muss erlaubt werden</string>
    <string name="fields">Alle Felder ausfüllen!</string>
    <string name="pasword_check">Passwort überprüfen</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="profile_pic">Kein Profilbild gefunden</string>
    <string name="new_match">Neues Match</string>
    <string name="no_data">Keine Daten gefunden für: </string>
    <string name="user_reg_suc">User registriert</string>
    <string name="password_repeat">Passwort wiederholen</string>
    <string name="cam_perm">Keine Rechte die Kamera zu öffnen</string>
    <string name="pic_shown_later">Das Bild wird beim nächsten Login angezeigt</string>

</resources>