<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/TVRegister"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:gravity="center"
        android:id="@+id/loginTv"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/etUser"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:layout_below="@id/loginTv"
        android:drawableLeft="@drawable/person"
        android:drawablePadding="10dp"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUser"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/pass_20mp_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/black" />
    <EditText
        android:id="@+id/etPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edPass"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/pass_20mp_24"
        android:drawablePadding="10dp"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/black" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_below="@id/etPass2"
        android:layout_margin="5dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/BTRegister"
        android:textStyle="bold"
        android:id="@+id/registerBtn"
        android:textSize="18dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>




</RelativeLayout>