<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Counter">


    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/start" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="107dp"
        android:layout_height="40dp"
        android:layout_row="1"
        android:layout_column="0" />

    <TextView
        android:id="@+id/movement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0" />

    <TextView
        android:id="@+id/momentan"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/geschwindigkeit" />

    <TextView
        android:id="@+id/gravitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/gravitation" />

</GridLayout>